# handwerkerbrief

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  004_add_email_templates.py  005_add_time_entries.py  006_add_recurring_invoices.py  007_add_team_invites.py  007_add_work_assignments.py  008_add_work_assignments.py  009_add_site_reports.py  010_add_archive.py  011_add_portal_token.py  012_add_bank_transactions.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  archive.py  auth.py  bank.py  customers.py  documents.py  feedback.py  gdpr.py  ocr.py  portal.py  positions.py  recurring_invoices.py  scheduling.py  site_reports.py  tax.py  team.py  time_entries.py  users.py
backend/app/core/: auth.py  overdue_scheduler.py  recurring_scheduler.py  security.py
backend/app/models/: __init__.py  archive.py  assignment.py  bank_transaction.py  customer.py  document.py  document_item.py  email_log.py  email_template.py  feedback.py  payment_reminder.py  position.py  recurring_invoice.py  site_report.py  team_invite.py  time_entry.py  user.py
backend/app/schemas/: __init__.py  auth.py  customer.py  document.py  feedback.py  user.py
backend/app/services/: email_service.py  pdf_service.py
backend/tests/: conftest.py  test_auth.py  test_customers.py  test_documents.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/src/lib/: api.ts  (+3 more)
nginx/: default.conf  nginx.conf
(+52 files in other folders)
